force-app/main/default/objects/Address__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>America/Anchorage</fullName>
                <label>(GMT-08:00) Alaska Daylight Time (America/Anchorage)</label>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
                <label>(GMT-06:00) Central Standard Time (America/El_Salvador)</label>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
                <label>(GMT-05:00) Central Daylight Time (America/Chicago)</label>
            </value>
            <value>
                <fullName>Pacific/Honolulu</fullName>
                <label>(GMT-10:00) Hawaii-Aleutian Standard Time (Pacific/Honolulu)</label>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
                <label>(GMT-07:00) Mountain Standard Time (America/Phoenix)</label>
            </value>
            <value>
                <fullName>Pacific/Pitcairn</fullName>
                <label>(GMT-08:00) Pitcairn Time (Pacific/Pitcairn)</label>
            </value>
            <value>
                <fullName>US/Alaska</fullName>
                <isActive>false</isActive>
                <label>US/Alaska</label>
            </value>
            <value>
                <fullName>US/Central</fullName>
                <isActive>false</isActive>
                <label>US/Central</label>
            </value>
            <value>
                <fullName>US/Eastern</fullName>
                <isActive>false</isActive>
                <label>US/Eastern</label>
            </value>
            <value>
                <fullName>US/Hawaii</fullName>
                <isActive>false</isActive>
                <label>US/Hawaii</label>
            </value>
            <value>
                <fullName>US/Mountain</fullName>
                <isActive>false</isActive>
                <label>US/Mountain</label>
            </value>
            <value>
                <fullName>US/Pacific</fullName>
                <isActive>false</isActive>
                <label>US/Pacific</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>