force-app/main/default/objects/Address__c/fields/ZipcodeCityState__c.field-meta.xml
<CustomField>
    <fullName>ZipcodeCityState__c</fullName>
    <label>ZipcodeCityState</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>